tests/expectations/compiler/dynamic_dispatch/dynamic_mapping_unknown_op_fail.out
Error [ETYC0372156]: Unknown mapping operation `remove`. Expected `get`, `get_or_use`, or `contains`.
    --> compiler-test:13:29
     |
  13 |     Bank@(target)::balances.remove(key);
     |                             ^^^^^^
